# RAGLR-A

./: .env.example  .gitignore  DATA_CARD.md  FOR_RESEARCHERS.md  LICENSE  README.md  SYSTEM_DESIGN.md  pyproject.toml  requirements.txt
api/: main.py
app/: streamlit_app.py
configs/: arxiv_taxonomy.yaml  config.yaml
data/: canonical_papers.yaml
docs/: DATA_CARD.md  ENGINEERING_BREAKDOWN.md  EVALUATION.md  LIMITATIONS.md  SYSTEM_DESIGN.md  setup.md
evaluation/: eval_queries.json
prompts/: claude_hyde_v1.txt  claude_justifier_v1.txt  qwen_keywords_v1.txt
scripts/: _smoke_test_pipeline.py  benchmark_embedding_models.py  build_bm25_index.py  build_dense_index_fast.py  build_embedding_benchmark.py  build_indexes.py  build_keyword_index.py  build_metadata_db.py  embed_new_papers_delta.py  evaluate_retrieval.py  incremental_update.py  merge_keyword_shards.py  merge_recovered_papers.py  orchestrate_indexing.py  recover_missing_papers.py  run_query.py  run_scheduler.py  update_arxiv_data.py  watch_and_run_bm25.ps1
src/rag_lit/: __init__.py  bm25_retriever.py  canonical_boost.py  config.py  data_ingestion.py  dedup.py  dense_retriever.py  eval_metrics.py  hyde.py  logger.py  (+11 more)
tests/: test_arxiv_harvest_resilience.py  test_arxiv_oai_parsing.py  test_bm25_retriever.py  test_canonical_boost.py  test_dedup.py  test_dense_retriever.py  test_eval_metrics.py  test_evaluate_retrieval.py  test_filters.py  test_incremental_update.py  test_keyword_index.py  test_latex_cleanup.py  test_metadata_db.py  test_pipeline_smoke.py  test_qwen_prefilter.py  test_rrf.py  test_schemas.py
(+1 files in other folders)
